# nssm-rs

./: .gitignore  Cargo.toml  GITHUB_ACTIONS.md  LOGGING.md  README.md  README_NEW.md  README_OLD.md  USAGE.md  build.rs  cliff.toml  test_app.py  test_service.py
.github/: dependabot.yml
.github/workflows/: build.yml  changelog.yml  ci.yml  cleanup.yml  create-tag.yml  release.yml
examples/: test_service.bat  test_service.py
examples/test-app/: Cargo.toml
examples/test-app/src/: main.rs
src/: cli.rs  cmdline.rs  config.rs  error.rs  main.rs  parameters.rs  registry.rs  service_manager.rs  service_runner.rs
