[package]
name = "nssm-rs"
version = "0.2.2"
edition = "2024"

[[bin]]
name = "nssm-rs"
path = "src/main.rs"

[package.metadata.winres]
ProductName = "NSSM-RS"
FileDescription = "A Rust implementation of NSSM - the Non-Sucking Service Manager"
OriginalFilename = "nssm-rs.exe"
LegalCopyright = "Copyright (c) 2025"

[build-dependencies]
winresource = "0.1"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
windows = { version = "0.62", features = [
    "Win32_Foundation",
    "Win32_System_Services",
    "Win32_Security",  
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Console",
    "Win32_System_ProcessStatus",
    "Win32_System_SystemServices",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_ToolHelp",
    "Win32_UI_WindowsAndMessaging",
] }
windows-service = "0.8"
log = "0.4"
env_logger = "0.11"
ctrlc = "3.5"
chrono = { version = "0.4", features = ["clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
debug = false
strip = true
opt-level = "z"
