[package]
name = "nssm-rs"
version = "0.4.2"
edition = "2024"

[package.metadata.winres]
ProductName = "NSSM-RS"
FileDescription = "A Rust implementation of NSSM - the Non-Sucking Service Manager"
OriginalFilename = "nssm-rs.exe"
LegalCopyright = "Copyright (c) 2025"

[[bin]]
name = "nssm-rs"
path = "src/main.rs"

[dependencies]
chrono = { version = "0.4", features = ["clock"] }
clap = { version = "4.6", features = ["derive"] }
ctrlc = "3.5"
env_logger = "0.11"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
windows = { version = "0.62", features = ["Win32_Foundation", "Win32_System_Services", "Win32_Security", "Win32_System_Registry", "Win32_System_Threading", "Win32_System_Console", "Win32_System_ProcessStatus", "Win32_System_SystemServices", "Win32_Storage_FileSystem", "Win32_System_Diagnostics_ToolHelp", "Win32_UI_WindowsAndMessaging"] }
windows-service = "0.8"

[build-dependencies]
winresource = "0.1"

[profile.release]
debug = false
strip = true
opt-level = "z"
lto = true
